# sec-bench.github.io

./: .gitignore  Makefile  README.md  build.py  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  gh-pages.yml  static.yml
assets/: index-DvHEDz-f.js  index-kyfz09yd.css
chromium/: detail.html  index.html  login.html
chromium/css/: detail.css  login.css  style.css
chromium/js/: detail.js  login.js  main.js
content/: about.md
css/: components.css  core.css  filters.css  layout.css  sidebar.css  styles.css
data/: leaderboards.yaml
data/chromium/: dataset.binc  dataset.binj
js/: citation.js  sidebar.js
public/data/: local-leaderboard-data.json
src/: About.vue  Header.vue  Home.vue  Submit.vue  Viewer.vue  utils.ts
templates/: base.html  index.html
templates/pages/: citations.html  contact.html  submit.html
